# letters-api

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  Makefile  README.md  application.py  config.py  dictionary.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  insertdictionary.py  letters-api.conf  loaddev  pyproject.toml  requirements.txt  ruff.toml  run.py  startdev  wsgi.py
.devcontainer/: devcontainer.json
anagrammer/: .pylintrc  __init__.py  database.py  dictionary.py  insertdictionary.py  ladder.py  letters.py  main.py  models.py  tests.py  views.py
config/: README.md  config.py  insertdictionary.py
config/notebooks/: ladders.ipynb
deployment/: README.md  external-apache.conf
dictionaries/: sowpods.txt
requirements/: base.txt  dev.txt
src/letters/anagrammer/: dictionary.py  ladder.py  letters.py  main.py  models.py
src/letters/config/: insertdictionary.py  load_ladders.py  telemetry.py
src/letters/config/notebooks/: embeddings.ipynb  ladders.ipynb
test/: tests.py  tests_api.py  tests_db.py  utils.py
tests/: ladders.json  onionladders.json  tests_api.py  tests_db.py  utils.py
