[project]
name = "letters"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shaun", email = "shaunhegarty@users.noreply.github.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "psycopg2-binary==2.9.3",
    "uvicorn>=0.24.0.post1",
    "requests==2.31.0",
    "SQLAlchemy==2.0.23",
    "sqlmodel==0.0.14",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "SQLAlchemy-Utils==0.41.1",
    "python-dotenv>=1.0.0",
    "honeycomb-opentelemetry>=0.2.3b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-dbapi>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-urllib>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-urllib3>=0.41b0",
    "tqdm>=4.66.1",
    "alembic>=1.13.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=3.0.1",
]


[tool.pytest.ini_options]
pythonpath = "src"


[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "annotated-types>=0.7.0",
    "types-requests>=2.32.0.20240712",
    "types-sqlalchemy-utils>=1.1.0",
    "mypy>=1.11.2",
    "mypy-extensions>=1.0.0",
    "httpx>=0.27.0",
]

